--- a/src/views/UserForm.css
+++ b/src/views/UserForm.css
@@ -1,3 +1,15 @@
 .headingtext{
     text-align: center;
 }
+.body{
+    background-image: url("../assets/background.jpg");
+}
+
+.useraresults{
+    background: rgba(213, 234,232, 1);
+    border-radius: 0.5rem;
+}
+.tinyheading{
+    text-align: center;
+    text-decoration: underline;
+}
